@@ -3,23 +3,13 @@ Hash: SHA256
 
 AUX docker-py-0.3.2-no-version-lock.patch 641 SHA256 bb3ef697720a8934a822204d137873d82c7473f44a2ebde3b969916c9c395e25 SHA512 d8d4c8335ee8fe318ef013e38ff6147a8de1ddc4636d251fab2bb4ae0b4f42f2e9a25ee90ad24839b10d67b3e909804d38639f9b5ff74f9a4a90bc81ad1e4fee WHIRLPOOL e0c1c500fb8a2000bb50cda09dac4a271b0c9e1ae0108e4c3bee02d1db30343c00aeaae400b1b6338ff356218463e3b0898065343f0a6a5a8aac75ff2df72912
 DIST docker-py-0.3.2.tar.gz 18639 SHA256 146de3243219e6358e63c93fcd34116330b165669b8bdc0880bfc2271c552e65 SHA512 f6873b56b1ce87cdb907abe1a84383b435b1fe21cb71c5132a2cfd6d2434c6b71675b2de007f9fcbe5641ab7eb21bccdc5df6d009f0542e1aff6dc7c64014bda WHIRLPOOL c931fae60a51bc3866287c6d4dbb854da4d0d9ce0aa9e92244db683354b21cbebb2edd901efd5a7f2eda59229a50a3a54aad17ee7408940df4e11bf96da3392b
-EBUILD docker-py-0.3.2.ebuild 866 SHA256 ce711ebcd39e97719f0ce222ed04c1c5d49b8ee39b004e6b37e4cc9f853a586e SHA512 b0dd6d02b330635f77adceb383b75e96b42b4f52277f7e901d8051e7790e268ca7cb8035968aaf7d0cb01d33faf054cc083fd5c6e43db76dd244f38145485b51 WHIRLPOOL 41a367aa62b1a61109c59ed913310161cc03ebaa238856dc4003ef7b5678988815680f0d6cb61b0ce95295aabc22848632e5a9951d30e75f9528a694e201e3db
-MISC ChangeLog 406 SHA256 984f5ba23ac266df95b29fa61ac86e16fe4c6fbe15d6c0918eea77bd23d84064 SHA512 72d81dc7fdaaae2530fb0cede7e425be19c25c6d91ffcc003b62c019de7740eb35aa62c4ce18b947159d3038c4dc92e0cffc7e2990f8b051302a9b7bdadd9bd9 WHIRLPOOL 73ae48995183e43c142761924d4a7fbc306983d67f7a2339059c490db2d97b2bd4a6b57d0c6245985b92ca94e333c2baff1532a5226388fe3137ebfb8fbb7fd2
+EBUILD docker-py-0.3.2.ebuild 873 SHA256 d03aed98b9c34bc973bdd02a828a513d5fa98e51b1a3b976414ac1b9cbe7b96e SHA512 0c1f08686ce5305b5403f8420be903133b5acac6708286c041a8da69204f6c8976920ea082df904b00610f56c14a4e5adbcac30530f3a535c74467eb6420ad19 WHIRLPOOL 779d2044b175473f26d19abb263bb1a323fd235e95548f7a67992c15ad8d93a14df8352e820e3a9230a22f925e1cd39a14eef4e5658aba74d80b683e2fc93935
+MISC ChangeLog 516 SHA256 0d204ff93b51137caaf92c3d7534b2de1be28759242abe53922c437e16fefc66 SHA512 b21ee9b0dde4d5bf72f930f370f34154091de97a6e2e84ab4da18e536695c3529c722280b240399f6ae96e704971d2ed2a28a99a850a8c2a6174e098807abf65 WHIRLPOOL 822d8cfa9e5a04757aecc032e0dfb2fc0469aeee920250635c5ed857043fb2ff9bfef3a6c978d222d0d0dc06fa5ecfd944663a48b75cec9bacba5d76d7db7137
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTsyrAAAoJEHy/RO9cNQiDkckP/2nugTCvvCpTQGS1LF2DJU4Y
-RqepLGFBF1kp83iJoK2vLoTfWZIEdE3kEGQSHBz8lVZVCsKxKHp3FeWfJLyLk+V7
-xStyWiv5dSaa2ImghhSVUSheK6p1cyY5N0LcpVbumBqit8L7rSJn5L22kV5zloxn
-73QhwVFFosUX2o3a1HA2aSfI0sFBAHRcIDGToelagqLRZuAdipBCgDK51UuoEYHl
-MhlvSLEQ+gJf8fG+/1yK6VAL9XjerZAsQJorrQTI7yviFgtFPNc0aAksfOz6cKpK
-48saY8gkuK9SS3buLnEfRB6jPCIixXDuUWUCDOyx7c1FYTO0PnWOpy6x8AL0etD2
-HHoUgM0tIlkesx1/jEeM7FjxhDKy+Tmt/zhKY/LKW9LpmTFGCWKEEmXbOM10rNgG
-GG2444IOxF6LGuWzKB9VIcLKpUybHCUrT76kdhlIPo6AT2jZqIwZQcfpdAxlEraS
-NnfuHgWEkPvZjt4PU3q17rnvfEhL0llTZLW+CFaBuBHih3EXjPid7TuBMveLDVKT
-aQIc4N+N94MonCPsjUStjmAQAZpag1oxWRoTcBOgOISkdVXY7DC01J8WcymjicWV
-Ua46BE1CzsT9bdPQlLJxv6A5s1IRsdZRRG6A1Za1/OSB8wFUvWVFa2U6T/iJGP8O
-zlVxHe2rUMr8nu4mCWIF
-=ksYj
+iEYEAREIAAYFAlPgRokACgkQso7CE7gHKw2GkgCg25eluNIBhAvzz2qLTEUUnPsH
+2oIAoKufLfsApHd7RNSWXAFemqvP2XSk
+=rx9s
 -----END PGP SIGNATURE-----
