@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docker-py/docker-py-0.3.2.ebuild,v 1.1 2014/07/01 21:40:15 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docker-py/docker-py-0.3.2.ebuild,v 1.2 2014/08/05 02:59:37 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=(python3_{3,4})
+PYTHON_COMPAT=( python{2_7,3_{3,4}} )
 inherit distutils-r1
 
 DESCRIPTION="An API client for docker."
