@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/stressapptest
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/stressapptest/ChangeLog,v 1.8 2014/08/04 13:28:28 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/stressapptest/ChangeLog,v 1.9 2014/08/05 02:23:08 vapier Exp $
+
+*stressapptest-1.0.7_p1 (05 Aug 2014)
+
+  05 Aug 2014; Mike Frysinger <vapier@gentoo.org>
+  +stressapptest-1.0.7_p1.ebuild:
+  Add the 1.0.7 release per upstream.
 
 *stressapptest-1.0.6-r2 (04 Aug 2014)
 
